# point-cloud-central

./: 00_geometry_feature_extraction.ipynb  01_optimal_neighborhood.ipynb  02_surface_points_extraction.ipynb  03_surface_reconstruction.idea.md  03_surface_reconstruction.ipynb  LICENSE  README.md  main.py  pyproject.toml
data/: MLS_UTWENTE_super_sample_crop.ply
data/UTWENTE/: MLS_UTWENTE_super_sample_crop.ply
