[project]
name = "point-cloud-central"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "open3d>=0.19.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "trimesh>=4.10.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
extend-select = ["I"]
exclude = []

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ERA001", "T201", "FBT001", "FBT002", "PLR0913", "PLC0415"]
